--- a/src/main/resources/export/cpp/build.gradle
+++ b/src/main/resources/export/cpp/build.gradle
@@ -47,6 +47,11 @@ def includeDesktopSupport = false
 // upon debugging
 dependencies {
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, true)
+    simulation wpi.deps.sim.driverstation(wpi.platforms.desktop, false)
+
+    // Websocket extensions require additional configuration.
+    // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
+    // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
 }
 
 model {
