Move test-resources folder to build (#268)
Fixes #252
Also fully excludes test-resources and test in .gitignore for existing files
excludes vendordeps generated folder
Download commands vendordep to build folder
Change SaveAndLoad Test to use build directory

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,13 @@
 save*.yaml
 *~
 *#
-/test-resources/RobotBuilderTestProject/*
+/test-resources/
 /.svn/*
 *.exec
 dependency-reduced-pom.xml
 nbactions.xml
-
+src/main/resources/export/vendordeps/
+/test/
 
 
 
